--- a/index.html
+++ b/index.html
@@ -28,16 +28,27 @@
         </ul>
       </header>
       <section>
-        <h2>Example usage</h2>
+        <h1>
+<a name="puppet-redis" class="anchor" href="#puppet-redis"><span class="octicon octicon-link"></span></a>Puppet Redis</h1>
 
-<h3>Standalone</h3>
+<h2>
+<a name="build-status" class="anchor" href="#build-status"><span class="octicon octicon-link"></span></a>Build status</h2>
+
+<p><a href="https://travis-ci.org/arioch/puppet-redis"><img src="https://travis-ci.org/arioch/puppet-redis.png?branch=master" alt="Build Status"></a></p>
+
+<h2>
+<a name="example-usage" class="anchor" href="#example-usage"><span class="octicon octicon-link"></span></a>Example usage</h2>
+
+<h3>
+<a name="standalone" class="anchor" href="#standalone"><span class="octicon octicon-link"></span></a>Standalone</h3>
 
 <pre><code>class {
   'redis':;
 }
 </code></pre>
 
-<h3>Master node</h3>
+<h3>
+<a name="master-node" class="anchor" href="#master-node"><span class="octicon octicon-link"></span></a>Master node</h3>
 
 <pre><code>class {
   'redis':
@@ -46,7 +57,8 @@
 }
 </code></pre>
 
-<h3>Slave node</h3>
+<h3>
+<a name="slave-node" class="anchor" href="#slave-node"><span class="octicon octicon-link"></span></a>Slave node</h3>
 
 <pre><code>class {
   'redis':
@@ -56,15 +68,36 @@
 }
 </code></pre>
 
-<h3>Manage repositories</h3>
+<h3>
+<a name="manage-repositories" class="anchor" href="#manage-repositories"><span class="octicon octicon-link"></span></a>Manage repositories</h3>
 
-<p>Disabled by default but if you really want the module to manage the required 
+<p>Disabled by default but if you really want the module to manage the required
 repositories you can use this snippet:</p>
 
 <pre><code>class {
   'redis':
     manage_repo =&gt; true,
 }
+</code></pre>
+
+<h2>
+<a name="unit-testing" class="anchor" href="#unit-testing"><span class="octicon octicon-link"></span></a>Unit testing</h2>
+
+<p>Plain RSpec:</p>
+
+<pre><code>$ rake spec
+</code></pre>
+
+<p>Using bundle:</p>
+
+<pre><code>$ bundle exec rake spec
+</code></pre>
+
+<p>Test against a specific Puppet or Facter version:</p>
+
+<pre><code>$ PUPPET_VERSION=3.2.1  bundle update &amp;&amp; bundle exec rake spec
+$ PUPPET_VERSION=2.7.19 bundle update &amp;&amp; bundle exec rake spec
+$ FACTER_VERSION=1.6.8  bundle update &amp;&amp; bundle exec rake spec
 </code></pre>
       </section>
       <footer>
