--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
       </header>
       <section>
         <h1>
-<a name="puppet-redis" class="anchor" href="#puppet-redis"><span class="octicon octicon-link"></span></a>Puppet Redis</h1>
+<a id="puppet-redis" class="anchor" href="#puppet-redis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Puppet Redis</h1>
 
 <h2>
-<a name="build-status" class="anchor" href="#build-status"><span class="octicon octicon-link"></span></a>Build status</h2>
+<a id="build-status" class="anchor" href="#build-status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build status</h2>
 
 <p><a href="https://travis-ci.org/arioch/puppet-redis"><img src="https://travis-ci.org/arioch/puppet-redis.png?branch=master" alt="Build Status"></a></p>
 
 <h2>
-<a name="example-usage" class="anchor" href="#example-usage"><span class="octicon octicon-link"></span></a>Example usage</h2>
+<a id="example-usage" class="anchor" href="#example-usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example usage</h2>
 
 <h3>
-<a name="standalone" class="anchor" href="#standalone"><span class="octicon octicon-link"></span></a>Standalone</h3>
+<a id="standalone" class="anchor" href="#standalone" aria-hidden="true"><span class="octicon octicon-link"></span></a>Standalone</h3>
 
 <pre><code>class { 'redis':;
 }
 </code></pre>
 
 <h3>
-<a name="master-node" class="anchor" href="#master-node"><span class="octicon octicon-link"></span></a>Master node</h3>
+<a id="master-node" class="anchor" href="#master-node" aria-hidden="true"><span class="octicon octicon-link"></span></a>Master node</h3>
 
 <pre><code>class { 'redis':
   bind        =&gt; '10.0.1.1';
@@ -56,7 +56,7 @@
 </code></pre>
 
 <h3>
-<a name="slave-node" class="anchor" href="#slave-node"><span class="octicon octicon-link"></span></a>Slave node</h3>
+<a id="slave-node" class="anchor" href="#slave-node" aria-hidden="true"><span class="octicon octicon-link"></span></a>Slave node</h3>
 
 <pre><code>class { 'redis':
   bind        =&gt; '10.0.1.2',
@@ -66,7 +66,7 @@
 </code></pre>
 
 <h3>
-<a name="manage-repositories" class="anchor" href="#manage-repositories"><span class="octicon octicon-link"></span></a>Manage repositories</h3>
+<a id="manage-repositories" class="anchor" href="#manage-repositories" aria-hidden="true"><span class="octicon octicon-link"></span></a>Manage repositories</h3>
 
 <p>Disabled by default but if you really want the module to manage the required
 repositories you can use this snippet:</p>
@@ -84,8 +84,27 @@ repositories you can use this snippet:</p>
 }
 </code></pre>
 
+<h3>
+<a id="redis-sentinel" class="anchor" href="#redis-sentinel" aria-hidden="true"><span class="octicon octicon-link"></span></a>Redis Sentinel</h3>
+
+<p>Optionally install and configuration a redis-sentinel server.</p>
+
+<p>With default settings:</p>
+
+<pre><code>class { 'redis::sentinel':}
+</code></pre>
+
+<p>With adjustments:</p>
+
+<pre><code>class { 'redis::sentinel':
+  master_name =&gt; 'cow',
+  redis_host  =&gt; '192.168.1.5',
+  failover_timeout =&gt; 30000,
+}
+</code></pre>
+
 <h2>
-<a name="unit-testing" class="anchor" href="#unit-testing"><span class="octicon octicon-link"></span></a>Unit testing</h2>
+<a id="unit-testing" class="anchor" href="#unit-testing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Unit testing</h2>
 
 <p>Plain RSpec:</p>
 
