--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ repositories you can use this snippet:</p>
 }
 </code></pre>
 
-<p>On Ubuntu, "chris-lea/redis-server" ppa repo will be added. You can change it by using ppa_repo parameter: </p>
+<p>On Ubuntu, "chris-lea/redis-server" ppa repo will be added. You can change it by using ppa_repo parameter:</p>
 
 <pre><code>class { 'redis':
   manage_repo =&gt; true,
@@ -122,6 +122,18 @@ repositories you can use this snippet:</p>
 $ PUPPET_VERSION=2.7.19 bundle update &amp;&amp; bundle exec rake spec
 $ FACTER_VERSION=1.6.8  bundle update &amp;&amp; bundle exec rake spec
 </code></pre>
+
+<h2>
+<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
+
+<ul>
+<li>Fork it</li>
+<li>Create a feature branch (<code>git checkout -b my-new-feature</code>)</li>
+<li>Run rspec tests (<code>bundle exec rake spec</code>)</li>
+<li>Commit your changes (<code>git commit -am 'Added some feature'</code>)</li>
+<li>Push to the branch (<code>git push origin my-new-feature</code>)</li>
+<li>Create new Pull Request</li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/arioch">arioch</a></p>
